--- a/blogapp/blog/templates/blog/crearUsuario.html
+++ b/blogapp/blog/templates/blog/crearUsuario.html
@@ -1,23 +1,26 @@
+
 {% extends 'blog/layout.html' %}
 
 {% block content %}
 <h1>{{titulo}}</h1>
+<form method="post" action="{% url 'blog:agregarUsuariosBaseDD' %}">
+                {% csrf_token %}
+
 <div class="container">
     <label for="nombre"><b>Nombre de Usuario</b></label>
     <input type="text" placeholder="Nombre de usuario" name="nombre" required>
 </div>
+<div class = container>
+     <label for="Correo Electronico"><b>Correo Electronicoo</b></label>
+    <input type="text" placeholder="Correo Electronico" name="correo" required>
+</div>
 <div class="container">
     <label for="contraseña"> <b>Digite su Contraseña</b> </label>
-    <input type="text" placeholder="Escriba su contraseña" name="contraseña" required>
+    <input type="text" placeholder="Escriba su contraseña" name="contra" required>
 </div>
 <div class="container">
-    <button type="submit">Iniciar</button>
-
-
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="contraseña">Forgot <a href="#">password?</a></span>
-
+    <input type="submit"></input>
 
 </div>
-
+</form>
 {% endblock %}
