Funcionalidad básica de registro

--- a/blogapp/blog/templates/blog/iniciarSesion.html
+++ b/blogapp/blog/templates/blog/iniciarSesion.html
@@ -4,7 +4,7 @@
 <h1>{{titulo}}</h1>
 <body>
     <a>Si no tiene un usuario puede crearlo abajo</a>
-    <a href="crearUsuario/" class="nav-link">
+    <a href="{ url 'blog:iniciarSesion' }" class="nav-link">
         Cree su Usuario
     </a>
 
