--- a/blogapp/blog/templates/blog/registrar.html
+++ b/blogapp/blog/templates/blog/registrar.html
@@ -28,7 +28,7 @@
                         <input type="submit" value="Registrarse" class="btn btn-success btn-block mb-2">
                     </div>
                     <div class="col-md-6">
-                        <a href="{% url 'blog:iniciarSesion' %}" class="btn btn-secondary btn-block mb-2">Registrado? Iniciar sesión</a>
+                        <a href="{% url 'blog:iniciarSesion' %}" class="btn btn-secondary btn-block mb-2">¿Registrado? Iniciar sesión</a>
                     </div>
                 </div>
             </form>
