--- a/blogapp/blog/templates/blog/iniciarSesion.html
+++ b/blogapp/blog/templates/blog/iniciarSesion.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h2 class="mb-3">Iniciar Sesión</h2>
-<form>
+<form action="{% url 'blog:iniciarSesion' %}" method="post">{% csrf_token %}
     <div class="form-group">
         <input type="text" class="form-control" name="nombre" placeholder="Nombre de usuario...">
     </div>
