--- a/blogapp/blog/templates/blog/index.html
+++ b/blogapp/blog/templates/blog/index.html
@@ -2,4 +2,5 @@
 
 {% block content %}
 <h2>{{titulo}}</h2>
+<a href="{% url 'blog:crearPost' %}" class="btn-link">¿Desea hacer un post? Click Aqui</a>
 {% endblock %}
