--- a/blogapp/blog/templates/blog/registrar.html
+++ b/blogapp/blog/templates/blog/registrar.html
@@ -9,19 +9,40 @@
             <form action="{% url 'blog:registrarNuevoUsuario' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="email" name="email" class="form-control form-control-lg" placeholder="Email...">
+                    <input
+                            type="text"
+                            name="email"
+                            class="form-control form-control-lg"
+                            value="{{ email }}"
+                            placeholder="Email..."
+                    >
                 </div>
                 <div class="form-group">
-                    <input type="text" name="nombre" class="form-control form-control-lg"
-                        placeholder="Nombre de usuario...">
+                    <input
+                            type="text"
+                            name="nombre"
+                            class="form-control form-control-lg"
+                            value="{{ nombre }}"
+                            placeholder="Nombre de usuario..."
+                    >
                 </div>
                 <div class="form-group">
-                    <input type="password" name="contraseña" class="form-control form-control-lg"
-                        placeholder="Contraseña...">
+                    <input
+                            type="password"
+                            name="contraseña"
+                            class="form-control form-control-lg"
+                            value="{{ contraseña }}"
+                            placeholder="Contraseña..."
+                    >
                 </div>
                 <div class="form-group">
-                    <input type="password" name="contraseña2" class="form-control form-control-lg"
-                        placeholder="Confirmar contraseña...">
+                    <input
+                            type="password"
+                            name="contraseña2"
+                            class="form-control form-control-lg"
+                            value="{{ contraseña2 }}"
+                            placeholder="Confirmar contraseña..."
+                    >
                 </div>
                 <div class="row">
                     <div class="col-md-6">
