Pagina index con posts

--- a/blogapp/blog/templates/blog/crearPost.html
+++ b/blogapp/blog/templates/blog/crearPost.html
@@ -1,15 +1,15 @@
 {% extends 'blog/layout.html' %}
 
 {% block content %}
-<h2>{{titulo}}</h2>
+<h2>Crear nuevo post</h2>
 <form action="{% url 'blog:crearPost' %}" method="post">{% csrf_token %}
     <div class="form-group">
-        <input type="text" class="form-control" name="titulo" placeholder="Titulo del post">
+        <input type="text" class="form-control" name="titulo" placeholder="Titulo del post...">
     </div>
     <div class="form-group">
-        <label for="exampleFormControlTextarea1">Escriba su post abajo</label>
-        <textarea class="form-control" id="contenidoPost" name="contenido" rows="8"></textarea>
+        <label>Escriba su post abajo</label>
+        <textarea class="form-control" name="contenido" placeholder="Contenido..." rows="8"></textarea>
     </div>
-    <input type="submit" value="Postear!" class="btn btn-block btn-primary my-3">
+    <input type="submit" value="Postear!" class="btn btn-block btn-success my-3">
 </form>
 {% endblock %}
