--- a/blogapp/blog/templates/blog/layout.html
+++ b/blogapp/blog/templates/blog/layout.html
@@ -39,7 +39,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="{% url 'blog:crearPost' %}" class="nav-link">
                             Crear Post
                         </a>
                     </li>
