--- a/blogapp/blog/templates/blog/index.html
+++ b/blogapp/blog/templates/blog/index.html
@@ -7,7 +7,7 @@
     <div class="card card-body my-4">
         <h3>{{ post.titulo }}</h3>
         <p>{{ post.contenido }}</p>
-        <a href="#" class="btn btn-dark btn-block">Detalles</a>
+        <a href="{% url 'blog:detallesPost' post.id %}" class="btn btn-dark btn-block">Detalles</a>
     </div>
     {% endfor %}
 {% else %}
