Validación de posts

--- a/blogapp/blog/templates/blog/layout.html
+++ b/blogapp/blog/templates/blog/layout.html
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">
+                        <a href="{% url 'blog:cuenta' %}" class="nav-link">
                             Mi cuenta
                         </a>
                     </li>
