--- a/blogapp/blog/templates/blog/cuenta.html
+++ b/blogapp/blog/templates/blog/cuenta.html
@@ -8,9 +8,9 @@
             {% for estadisticasPost in estadisticasPosts %}
                 <li class="list-group-item">
                     <h5>{{ estadisticasPost.post.titulo }}</h5>
-                    <p><strong>Comentarios: </strong> {{ estadisticasPost.num_comentarios }}</p>
+                    <p><strong>Comentarios: </strong> {{ estadisticasPost.numComentarios }}</p>
                     <p><strong>Porcentaje Likes: </strong> {{ estadisticasPost.porcentajeLikes }}</p> 
-                    <p><strong>Visitas: </strong> {{ estadisticasPost.num_visitas }}</p>         
+                    <p><strong>Visitas: </strong> {{ estadisticasPost.numVisitas }}</p>         
                     <a href="{% url 'blog:detallesPost' estadisticasPost.post.id %}" class="btn btn-secondary btn-block">Ir al blog</a>
                 </li>
             {% endfor %}
