--- a/blogapp/blog/templates/blog/crearPost.html
+++ b/blogapp/blog/templates/blog/crearPost.html
@@ -4,17 +4,13 @@
 <h2>Crear nuevo post</h2>
 <form action="{% url 'blog:crearPost' %}" method="post">{% csrf_token %}
     <div class="form-group">
-        <input 
-            type="text" 
-            class="form-control" 
-            name="titulo" 
-            value="{{ post.titulo }}" 
-            placeholder="Titulo del post..."
-        >
+        <input type="text" class="form-control" name="titulo" value="{{ post.titulo }}"
+            placeholder="Titulo del post...">
     </div>
     <div class="form-group">
         <label>Escriba su post abajo</label>
-        <textarea class="form-control" name="contenido" placeholder="Contenido..." rows="8">{{ post.contenido }}</textarea>
+        <textarea class="form-control" name="contenido" placeholder="Contenido..."
+            rows="8">{{ post.contenido }}</textarea>
     </div>
 
     <input type="submit" value="Postear!" class="btn btn-block btn-success my-3">
